@@ -42,6 +42,9 @@ You need to have current libax25 installed.
 Ensure ax25-apps and ax25-tools are also installed. Ensure all configuration files 
 exist (use `make installconf' to install defaults).
 
+Installation paths can be changed to suit local requirements, see ./configure --help or INSTALL for 
+details. Ensure you install in the same paths used by libax25, ax25-apps, and ax25-tools.
+
 STARTING FPAC
 =============
 To start fpac, use the fpac.sh script
